# rust-reader

./: Cargo.toml  Makefile  README.md
src/: db.rs  lib.rs  main.rs  menu.rs  utils.rs
