[package]
name = "rust-reader"
version = "0.1.0"
authors = ["Soloshenko Aleksandr <i@capcom.me>"]
about = "Rust reader"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
polodb_core = "4.4"
regex = "1.10"
reqwest = { version = "0.11.23", features = ["blocking", "gzip", "brotli", "deflate"] }
rss = "2.0"
serde = { version = "1.0.195", features = ["derive"] }
terminal-menu = "3.0"
time = { version = "0.3.31", features = ["parsing", "formatting", "local-offset"] }
